--- a/app/src/main/res/layout/fragment_backtest_input.xml
+++ b/app/src/main/res/layout/fragment_backtest_input.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:hint="@string/symbol"
-                app:helperText="e.g., TSLA, BRK-B"
+                app:helperText="e.g., TSLA, BRK-B, BTC-USD"
                 app:helperTextEnabled="true"
                 app:startIconDrawable="@drawable/ic_baseline_trending_up_24">
 
@@ -50,18 +50,20 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/strategy_list_dropdown"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:hint="Strategy"
                 app:startIconDrawable="@drawable/ic_baseline_emoji_objects_24">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/strategy_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none" />
+                    android:inputType="text"
+                    android:cursorVisible="false"
+                    android:focusable="false"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
@@ -109,33 +111,33 @@
             </LinearLayout>
 
 
-            <TextView
-                android:id="@+id/strat_des_headline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:text="Strategy Description"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+<!--            <TextView-->
+<!--                android:id="@+id/strat_des_headline"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="5dp"-->
+<!--                android:text="Strategy Description"-->
+<!--                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />-->
 
-            <TextView
-                android:id="@+id/strat_des"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="16sp"
-                tools:text="Will be shown after strategy is selected" />
+<!--            <TextView-->
+<!--                android:id="@+id/strat_des"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="5dp"-->
+<!--                android:textAppearance="?attr/textAppearanceBody2"-->
+<!--                android:textColor="?android:attr/textColorSecondary"-->
+<!--                android:textSize="16sp"-->
+<!--                tools:text="Will be shown after strategy is selected" />-->
 
-            <Button
-                android:id="@+id/adv_opts_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Tune Parameters"
-                style="?attr/materialButtonOutlinedStyle"
-                app:cornerRadius="30dp"
-                />
+<!--            <Button-->
+<!--                android:id="@+id/adv_opts_button"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:text="Tune Parameters"-->
+<!--                style="?attr/materialButtonOutlinedStyle"-->
+<!--                app:cornerRadius="30dp"-->
+<!--                />-->
 
             <Button
                 android:id="@+id/backtest_button"
