--- a/app/src/main/res/menu/option_app_bar.xml
+++ b/app/src/main/res/menu/option_app_bar.xml
@@ -2,7 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/to_home"
+        android:title="To Home"
+        android:icon="@drawable/ic_baseline_home_24"
+        app:showAsAction="ifRoom"
+        />
+
+    <item
+        android:id="@+id/add_to_fav"
+        android:title="Favourite"
+        android:icon="@drawable/ic_baseline_favorite_24"
+        app:showAsAction="ifRoom"
+    />
+    <item
         android:id="@+id/action_fav_strat"
-        android:title="Set to Favourite"
+        android:title="Add to Favourite"
         app:showAsAction="never" />
 </menu>
