--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="c2">#EE7733</color>
     <color name="c3">#009988</color>
     <color name="c4">#9467bd</color>
+    <color name="gray_background">#F5F5F5</color>
 </resources>
