--- a/app/src/main/res/layout/button_indicator.xml
+++ b/app/src/main/res/layout/button_indicator.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:hint="Select an indicator"
-        app:layout_constraintEnd_toStartOf="@+id/button_edit_param"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView24" />
 
@@ -38,16 +38,16 @@
         app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
         app:tint="@color/gray" />
 
-    <Button
-        android:id="@+id/button_edit_param"
-        style="@style/Widget.Material3.Button.IconButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        app:icon="@drawable/ic_outline_edit_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <Button-->
+<!--        android:id="@+id/button_edit_param"-->
+<!--        style="@style/Widget.Material3.Button.IconButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        app:icon="@drawable/ic_outline_edit_24"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/imageView2"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
