--- a/app/src/main/res/layout/fragment_parameter_dialog.xml
+++ b/app/src/main/res/layout/fragment_parameter_dialog.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/DisableLiftOnScroll">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/param_app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            app:navigationIconTint="?attr/colorOnSurface" />
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="16dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="16dp">
 
         <TextView
             android:id="@+id/param_dialog_text"
@@ -37,19 +27,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/param_dialog_text"
+            app:layout_constraintVertical_bias="0.0"
             tools:layout_editor_absoluteX="16dp" />
 
-        <Button
-            android:id="@+id/button_confirm_param"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Done"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/param_layout" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
