--- a/app/src/main/res/layout/chip_legend.xml
+++ b/app/src/main/res/layout/chip_legend.xml
@@ -2,12 +2,15 @@
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/chip_legend_width"
     android:layout_height="wrap_content"
     android:checkable="true"
     app:chipIcon="@drawable/ic_baseline_circle_24"
     app:chipIconTint="@color/plotColor1"
     app:ensureMinTouchTargetSize="false"
+    android:ellipsize="end"
+    app:closeIcon="@drawable/ic_baseline_keyboard_arrow_right_24"
+    app:closeIconEnabled="true"
     tools:text="AAPL, Buy and Hold">
 
 </com.google.android.material.chip.Chip>
