--- a/app/src/main/res/layout/fragment_indicator_list.xml
+++ b/app/src/main/res/layout/fragment_indicator_list.xml
@@ -16,8 +16,7 @@
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:navigationIconTint="?attr/colorOnSurface"
-            app:menu="@menu/search_app_bar"
-            app:title="Indicators" />
+            app:menu="@menu/search_app_bar" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
