--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.AlphaBet" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <!--        <item name="colorPrimary">@color/purple_200</item>-->
+        <item name="colorPrimary">@color/indigo_300</item>
+        <item name="colorSecondaryContainer">@color/indigo_400</item>
         <!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
         <!--        <item name="colorOnPrimary">@color/black</item>-->
         <!-- Secondary brand color. -->
@@ -10,22 +11,24 @@
         <!--        <item name="colorSecondaryVariant">@color/teal_200</item>-->
         <!--        <item name="colorOnSecondary">@color/black</item>-->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/dark_grey</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+<!--        <item name="android:windowLightStatusBar">true</item>-->
         <!-- Customize your theme here. -->
-        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
+<!--        <item name="toolbarStyle">@style/Widget.App.Toolbar</item>-->
         <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
         <item name="tabStyle">@style/Widget.App.TabLayout</item>
         <item name="materialDividerStyle">@style/Widget.App.MaterialDivider</item>
     </style>
 
-    <style name="Widget.App.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Toolbar</item>
-    </style>
+<!--    <style name="Widget.App.Toolbar" parent="Widget.MaterialComponents.Toolbar.Primary">-->
+<!--        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Toolbar</item>-->
+<!--    </style>-->
 
-    <style name="ThemeOverlay.App.Toolbar" parent="">
-        <item name="colorPrimary">@color/dark_grey</item>
-        <item name="colorOnPrimary">?attr/colorOnSurface</item>
-    </style>
+<!--    <style name="ThemeOverlay.App.Toolbar" parent="">-->
+<!--        <item name="colorPrimary">@color/dark_grey</item>-->
+<!--        <item name="colorOnPrimary">?attr/colorOnSurface</item>-->
+<!--    </style>-->
 
     <color name="secondary_background">@color/dark_grey</color>
     <color name="color_on_surface_alpha">@color/grey_800</color>
