--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -165,8 +165,18 @@
         <item name="android:background">@drawable/rounded_corner_text_bg</item>
         <item name="android:backgroundTint">?attr/colorPrimary</item>
         <item name="android:paddingHorizontal">5dp</item>
+        <item name="android:paddingVertical">2dp</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Widget.App.CardView" parent="Widget.Material3.CardView.Filled">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Card</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Card" parent="">
+        <item name="colorSurface">@color/black</item>
+        <item name="colorOnSurfaceVariant">@color/black</item>
     </style>
 
 
